group 'com.just10ying'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile "org.java-websocket:Java-WebSocket:1.3.4"
    compile group: 'org.json', name: 'json', version: '20170516'
    compile group: 'com.google.inject.extensions', name: 'guice-assistedinject', version: '4.1.0'
    compile group: 'com.google.inject', name: 'guice', version: '4.0'
    compile files('lib/j3d-org-all_1.1.0.jar')
    compile group: 'com.aparapi', name: 'aparapi', version: '1.3.4'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile "com.google.truth:truth:0.34"
}
